syntax = "proto3";

package proto;
option go_package = "./;proto";


message ProudSkillChangeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1055;
  }

  uint64 avatar_guid = 12;
  uint32 entity_id = 11;
  uint32 skill_depot_id = 7;
  repeated uint32 proud_skill_list = 4;
}
